# nyx660_tank_volume

./: .gitignore  README.md
nyx660_tank_volume/: README.md  config.example.helios2.yaml  config.example.yaml  config.production.example.yaml  pyproject.toml  requirements.txt
nyx660_tank_volume/data/: empty_tank_calibration.npz  latest_measurement.json
nyx660_tank_volume/scripts/: install-script.sh  install_jetson.sh  test-mock-helios2.sh  test_mock.sh
nyx660_tank_volume/src/nyx660_tank_volume/: cli-old.py  cli.py  config-oldv2.py  config-oldv3.py  config-oldv4.py  config.py  factory-updated.py  main.py
nyx660_tank_volume/src/nyx660_tank_volume/api/: app-old.py  app.py  models.py
nyx660_tank_volume/src/nyx660_tank_volume/camera/: base.py  factory_old.py  helios2-camera.py  helios2_camera.py  mock_camera.py  mock_helios2_camera.py  scepter_camera.py
nyx660_tank_volume/src/nyx660_tank_volume/core/: calibration-oldv2.py  calibration-oldv3.py  calibration-oldv4.py  calibration-oldv5.py  calibration-oldv6.py  calibration-oldv7.py  calibration-oldv9.py  calibration_old.py  measurement-old.py  measurement-oldv2.py  measurement.py  measurement_loop-oldv2.py  measurement_loop.py  measurement_store.py  service-old.py  service-oldv2.py  tank_detect.py
nyx660_tank_volume/src/nyx660_tank_volume/utils/: images.py  io.py
nyx660_tank_volume/systemd/: nyx660-tank-volume.service  systemd-service.service
